# CMake-scope

./: .gitignore  CMakeLists.txt  index.html  readme.md
child/: CMakeLists.txt
cmake/: MyCMake  MyCMake2
